# saitama-np-rss

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yaml
tests/: test_main.py
