[project]
name = "saitama-np-rss"
version = "0.1.0"
description = "Atom feed generator for saitama-np.co.jp まちの話題 (さいたま)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests>=2.32",
    "feedgenerator>=2.1",
    "beautifulsoup4>=4.12",
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "mypy>=1.13",
    "pytest>=9.1.0",
    "pytest-cov>=6",
    "pre-commit>=4",
    "types-requests",
    "types-beautifulsoup4",
]
# uv 本体のバージョンピン。Dependabot (uv エコシステム) がこの行を bump し、
# CI (.github/workflows/gh-pages.yaml) が setup-uv に渡す version をここから読む。
# 既定グループではないため `uv sync` で venv にはインストールされない。
ci = ["uv==0.11.21"]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C90", # mccabe complexity
    "RUF",
    "PTH", # use pathlib
    "PL",  # pylint
]
ignore = [
    "PLR2004", # magic numbers in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PLR0913"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
files = ["main.py", "tests"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "feedgenerator"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=main --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
